--- a/notebook/test_stage12.ipynb
+++ b/notebook/test_stage12.ipynb
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test_dir      = '../dataset_22video_20221031/test/'  ##　這邊改資料集\n",
+    "test_dir      = '../dataset_smooth_22video_20221031/test/'  ##　這邊改資料集\n",
     "# test_dir      = '../dataset_smooth_22video_20221031/train/'\n",
-    "test_dir      = '../dataset_smooth_22video_20221031/validation/'\n",
+    "# test_dir      = '../dataset_smooth_22video_20221031/validation/'\n",
     "test_img_arrays = []\n",
     "test_img_labels = []\n",
     "test_img_names  = []\n",
@@ -238,11 +238,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pd.DataFrame(test_dict).to_pickle(\"../result/stage1_pred_result_test.pickle\")\n",
+    "pd.DataFrame(test_dict).to_pickle(\"../result/stage1_pred_result_test.pickle\")\n",
     "# pd.DataFrame(test_dict).to_pickle(\"../result/stage1_pred_result_test_nosmooth.pickle\")\n",
+    "\n",
     "# pd.DataFrame(test_dict).to_pickle(\"../result/stage1_pred_result_train.pickle\")\n",
     "# pd.DataFrame(test_dict).to_pickle(\"../result/stage1_pred_result_validation.pickle\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -263,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('myenv')",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -277,12 +285,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov  4 2022, 16:13:54) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e60de47cb3857121f9ee587fa65ec3e886692403f703077c3e6fd7aef069122f"
+    "hash": "1448b48b023bcc9c3d4a79e814720a10ca6d4244f75e0f7ce4af58f96ba2b7d3"
    }
   }
  },
