--- a/notebook/smooth.ipynb
+++ b/notebook/smooth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "datasets = ['train', 'validation', 'test']\n",
     "classs   = ['0', '1']\n",
     "\n",
-    "\n",
     "for dataset in datasets:\n",
     "    for cl in classs:\n",
-    "        img_paths = glob('../dataset/{}/{}/*.png'.format(dataset, cl))\n",
+    "        img_paths = glob('../dataset_186video_20230323/{}/{}/*.png'.format(dataset, cl))\n",
     "\n",
     "        for img_path in img_paths:\n",
     "            img_array = cv.imread(img_path)\n",
-    "            img_name  = img_path.split('\\\\')[1]\n",
-    "\n",
+    "            img_name  = img_path.split('/')[-1]\n",
     "            # 兩次雙邊濾波\n",
     "            blurred_img  = cv.bilateralFilter(img_array, 15, 50,  50)\n",
     "            blurred_img2 = cv.bilateralFilter(blurred_img, 15, 50, 50)\n",
     "            \n",
-    "            cv.imwrite('../dataset_smooth/{}/{}/{}'.format(dataset,cl,img_name), blurred_img2)\n",
+    "            cv.imwrite('../dataset_smooth_186video_20230323/{}/{}/{}'.format(dataset,cl,img_name), blurred_img2)\n",
     "\n"
    ]
   },
@@ -75,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
