--- a/notebook/crop_img.ipynb
+++ b/notebook/crop_img.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,23 +15,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3599"
+       "2099"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img_paths = sorted(glob(\"../dataset_test_everyframes/raw_test_z/*.png\"))\n",
+    "img_paths = sorted(glob(\"../dataset_test_everyframes/raw_20220802/*.png\"))\n",
     "len(img_paths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "process: 2098"
+     ]
+    }
+   ],
+   "source": [
+    "# # # # 舊位置(壺腹乳頭在右邊)\n",
+    "# tags = ['a','b','c','d','e','f','g','h','i','j','q','z']\n",
+    "x1 = 160\n",
+    "x2 = 920\n",
+    "y1 = 1020\n",
+    "y2 = 1780\n",
+    "\n",
+    "for i,path in enumerate(img_paths):\n",
+    "    img_name  = path.split(\"/\")[-1]\n",
+    "    \n",
+    "    img_array = cv2.imread(path)[x1:x2, y1:y2]\n",
+    "    # plt.imshow(cv2.cvtColor(img_array, cv2.COLOR_BGR2RGB))\n",
+    "    # plt.show()\n",
+    "    cv2.imwrite('../dataset_test_everyframes/20220802/{}'.format(img_name), img_array)\n",
+    "    \n",
+    "    print(\"\\rprocess: {}\".format(i), end = '')"
    ]
   },
   {
@@ -39,54 +71,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "process: 3598"
-     ]
-    }
-   ],
-   "source": [
-    "# # # # 舊位置(壺腹乳頭在右邊)\n",
-    "tags = ['a','b','c','d','e','f','g','h','i','j','q','z']\n",
-    "x1 = 160\n",
-    "x2 = 920\n",
-    "y1 = 1020\n",
-    "y2 = 1780\n",
-    "\n",
-    "for i,path in enumerate(img_paths):\n",
-    "    img_name = path.split(\"/\")[-1]\n",
-    "    if(img_name[0] in tags):\n",
-    "\n",
-    "        img_array = cv2.imread(path)[x1:x2, y1:y2]\n",
-    "        # plt.imshow(cv2.cvtColor(img_array, cv2.COLOR_BGR2RGB))\n",
-    "        # plt.show()\n",
-    "        cv2.imwrite('../dataset_test_everyframes/test_z/{}'.format(img_name), img_array)\n",
-    "    \n",
-    "    print(\"\\rprocess: {}\".format(i), end = '')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "process: 2198"
-     ]
-    }
-   ],
    "source": [
     "# # 新位置(壺腹乳頭在左邊)\n",
     "# tags = ['k','l','m','n','o','p','r','s','t','u']\n",
@@ -138,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov  4 2022, 16:13:54) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
